config-root/namespaces/jx-staging/nodedemo/nodedemo-ingress.yaml
# Source: nodedemo/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nodedemo
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: nodedemo
              servicePort: 80
      host: nodedemo-jx-staging.dev.jenkins-x.me
